# diploma-cloud

./: .env  .gitignore  README.md  certs  docker-compose.dev.yml  docker-compose.yml  installer.sh
backend/: .gitignore  Dockerfile  docker-entrypoint.dev.sh  docker-entrypoint.sh  pyproject.toml  ruff.toml
backend/src/: manage.py
backend/src/storage/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/src/storage/migrations/: 0001_initial.py  0002_initial.py  0003_alter_file_content.py  0004_alter_file_content.py  0005_alter_file_content.py
backend/src/users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/src/users/migrations/: 0001_initial.py  0002_create_initial_staff.py
backend/src/utils/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  axiosConfig.ts  files.ts  users.ts
frontend/src/components/: AdminPanelButton.css  AdminPanelButton.tsx  ModalPortal.tsx  Navbar.css  Navbar.tsx  Toast.css  Toast.tsx  TrimmedText.tsx
frontend/src/components/adminPage/: UserItem.css  UserItem.tsx  UserList.css  UserList.tsx
frontend/src/context/: AuthContext.tsx  AuthContextHelpers.tsx  ToastContext.tsx  ToastContextHelpers.tsx  UploadModalContext.tsx  UploadModalContextHelpers.tsx
frontend/src/pages/: Admin.tsx  Storage.css  Storage.tsx  Welcome.css  Welcome.tsx
frontend/src/utils/: auth.ts  text.ts
nginx/: Dockerfile  docker-entrypoint.sh  nginx.conf
(+11 files in other folders)
