[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg[binary]>=3.2.9",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.15",
    "ruff>=0.12.5",
]
